Optimize the code style
Co-Authored-By: fastestshishen <47713021+fastestshishen@users.noreply.github.com>
Co-Authored-By: Bai Xingjin <89801343+baixingjin@users.noreply.github.com>

--- a/manual/zh/index.html
+++ b/manual/zh/index.html
@@ -20,11 +20,11 @@
 
   <p>从左侧选择主题。如果您不知道从哪里开始，请直接从这里开始： <a href="manual/zh/introduction/Beginners-Guide.html">新手入门</a>。</p>
 
-  <p>中文版手册有两个版本：官方翻译版是由我们的中国区技术代表 <a href="https://verge3d.funjoy.tech/">FunJoy.Tech</a> 维护，并在安装包中随附其二是由用户<a href="https://zjbcool.com/v3d-user-manual" target="_blank">宅家呗维护和托管的版本</a>。</p>
+  <p>中文手册官方版本由Verge3D中国区技术代表 <a href="https://verge3d.funjoy.tech/">FunJoy.Tech</a> 维护，并在安装包中随附。您也可以参考由用户<a href="https://zjbcool.com/v3d-user-manual" target="_blank">宅家呗翻译的版本</a>。</p>
   
   <p>如果您需要查看英文版文档，请直接在地址栏中的“zh”更改为“en”，即可切换到对应的英文文档页面，或者点击这里查看最新的英文版手册： <a href="https://www.soft8soft.com/docs/manual/en/index.html">Verge3D User Manual</a></p>
 
-  <p>点击这里查看最新的俄语版手册： <a href="https://www.soft8soft.com/docs/manual/ru/index.html">Руководство пользователя Verge3D</a></p>
+  <p>同理，在地址栏中将语言缩写改为“ru”即可切换到对应的俄语文档页面，或点击这里查看最新的俄语版手册： <a href="https://www.soft8soft.com/docs/manual/ru/index.html">Руководство пользователя Verge3D</a></p>
   
     <img src="files/blank/industrial-robot-gallery.jpg">
 </body>
