--- a/manual/zh/introduction/Useful-links.html
+++ b/manual/zh/introduction/Useful-links.html
@@ -38,21 +38,17 @@
       *YouTube*:
 
     <ul>
-      <li><a href="https://www.youtube.com/playlist?list=PLMnTV0uuRMhRH6p4DSW-AEcQZEulzm461" target="_blank">Verge3D fro
-          Blender基础</a> 视频教程。</li>
-      <li><a href="https://www.youtube.com/playlist?list=PLMnTV0uuRMhR2zhXxPqAD8G9wp_LNIXZc" target="_blank">Verge3D for
-          3ds Max基础</a> 视频教程。</li>
-      <li><a href="https://www.youtube.com/playlist?list=PLMnTV0uuRMhS89ra_kYqKPYbpCv2Eh5GO" target="_blank">Verge3D for
-          Maya基础</a> 频教程。
-
+      <li><a href="https://www.youtube.com/playlist?list=PLMnTV0uuRMhRH6p4DSW-AEcQZEulzm461" target="_blank">Verge3D fro Blender基础</a> 视频教程。</li>
+      <li><a href="https://www.youtube.com/playlist?list=PLMnTV0uuRMhR2zhXxPqAD8G9wp_LNIXZc" target="_blank">Verge3D for 3ds Max基础</a> 视频教程。</li>
+      <li><a href="https://www.youtube.com/playlist?list=PLMnTV0uuRMhS89ra_kYqKPYbpCv2Eh5GO" target="_blank">Verge3D for Maya基础</a> 频教程。
     </ul>
 
     *Bilibili*:
 
     <ul>
-      <li>[link:https://www.bilibili.com/video/BV144411R7GS Verge3D for Blender基础] 视频教程。</li>
-      <li>[link:https://www.bilibili.com/video/BV1ob411e7KC Verge3D for 3ds Max基础] 视频教程。</li>
-      <li>[link:https://www.bilibili.com/video/BV1eA411i79T Verge3D for Maya基础] 视频教程。</li>
+      <li><a href="https://www.bilibili.com/video/BV144411R7GS" target="_blank">Verge3D for Blender基础</a> 视频教程。</li>
+      <li><a href="https://www.bilibili.com/video/BV1ob411e7KC" target="_blank">Verge3D for 3ds Max基础</a> 视频教程。</li>
+      <li><a href="https://www.bilibili.com/video/BV1eA411i79T" target="_blank">Verge3D for Maya基础</a> 视频教程。</li>
     </ul>
 
     </p>
@@ -66,32 +62,23 @@
     *YouTube*:
 
     <ul>
-      <li><a href="https://www.soft8soft.com/making-3d-product-configurator-for-woocommerce/" target="_blank">Making 3D
-          Product Configurator for WooCommerce</a> (<a href="https://www.youtube.com/watch?v=dJdUKwSxA8c"
-          target="_blnak">video version</a>).</li>
-      <li><a href="https://www.youtube.com/watch?v=U6aGboR_sHE" target="_blank">Creating interactive interior
-          visualisation</a> — Verge3D for Blender tutorial by Dorian Zgraggen.</li>
-      <li><a href="https://www.youtube.com/playlist?list=PLvH2ejcv0wjRA4K6pQ6mUZgLTueIGSMe2" target="_blank">Creating
-          Asteroids game</a> — Verge3D for Blender tutorial series by Dariusz Dzwonkowski.</li>
-      <li><a href="https://youtu.be/ajK6_z2goXI" target="_blank">Verge3D with 3ds Max</a> — how to create
-        interactive car visualization in 3ds Max (by Jamie Cardoso).</li>
-      <li><a href="https://youtu.be/Os9skozlm6M" target="_blank">So you want a cool Maya plugin?</a> — Verge3D for
-        Maya review by Mike Hermes.</li>
-      <li><a href="https://youtu.be/t4RCYBMn-8I" target="_blank">Converting AutoCAD drawing to WebGL-based
-          interactives</a>.</li>
+      <li><a href="https://www.soft8soft.com/making-3d-product-configurator-for-woocommerce/" target="_blank">Making 3D Product Configurator for WooCommerce</a> (<a href="https://www.youtube.com/watch?v=dJdUKwSxA8c" target="_blnak">video version</a>).</li>
+      <li><a href="https://www.youtube.com/watch?v=U6aGboR_sHE" target="_blank">Creating interactive interior visualisation</a> — Verge3D for Blender tutorial by Dorian Zgraggen.</li>
+      <li><a href="https://www.youtube.com/playlist?list=PLvH2ejcv0wjRA4K6pQ6mUZgLTueIGSMe2" target="_blank">Creating Asteroids game</a> — Verge3D for Blender tutorial series by Dariusz Dzwonkowski.</li>
+      <li><a href="https://youtu.be/ajK6_z2goXI" target="_blank">Verge3D with 3ds Max</a> — how to create interactive car visualization in 3ds Max (by Jamie Cardoso).</li>
+      <li><a href="https://youtu.be/Os9skozlm6M" target="_blank">So you want a cool Maya plugin?</a> — Verge3D for Maya review by Mike Hermes.</li>
+      <li><a href="https://youtu.be/t4RCYBMn-8I" target="_blank">Converting AutoCAD drawing to WebGL-based interactives</a>.</li>
     </ul>
 
     *Bilibili*:
 
     <ul>
-      <li>为Woomerce制作3D产品配置应用 [link:https://verge3d.funjoy.tech/blog/1/post/woocommerce3d-58 文字版]
-        [link:https://www.bilibili.com/video/av71371969 视频版]</li>
-      <li>[link:https://www.bilibili.com/video/BV1fb411i7CT/ 创建可交互的室内设计可视化应用]（Verge3D for Blender）</li>
-      <li>[link:https://www.youtube.com/playlist?list=PLvH2ejcv0wjRA4K6pQ6mUZgLTueIGSMe2 创建一个小行星游戏] (Verge3D for
-        Blender)</li>
-      <li>[link:https://www.bilibili.com/video/BV1XA411g7A4/ 使用Verge3D和3ds Max制作交互时汽车展示网页]</li>
-      <li>[link:https://www.bilibili.com/video/BV1eo4y127Nu Verge3D评测 | 从Maya导出到WebGL | CGStirk]</li>
-      <li>[link:https://www.bilibili.com/video/BV1Xt411E7W6/ 将AutoCAD文件转制为可交互三维网页应用]</li>
+      <li>为Woomerce制作3D产品配置应用 <a href="https://verge3d.funjoy.tech/blog/1/post/woocommerce3d-58" target="_blank">文字版</a>，<a href="https://www.bilibili.com/video/av71371969" target="_blank">视频版</a></li>
+      <li><a href="https://www.bilibili.com/video/BV1fb411i7CT/" target="_blank">创建可交互的室内设计可视化应用</a>（Verge3D for Blender）</li>
+      <li><a href="https://www.youtube.com/playlist?list=PLvH2ejcv0wjRA4K6pQ6mUZgLTueIGSMe2" target="_blank">创建一个小行星游戏</a> (Verge3D for Blender)</li>
+      <li><a href="https://www.bilibili.com/video/BV1XA411g7A4/" target="_blank">使用Verge3D和3ds Max制作交互时汽车展示网页</a></li>
+      <li><a href="https://www.bilibili.com/video/BV1eo4y127Nu" target="_blank">Verge3D评测 | 从Maya导出到WebGL | CGStirk</a></li>
+      <li><a href="https://www.bilibili.com/video/BV1Xt411E7W6/" target="_blank">将AutoCAD文件转制为可交互三维网页应用</a></li>
     </ul>
 
     [anchor:social_media]
@@ -101,25 +88,13 @@
     <p>以下是Soft8Soft官方和第三方社交媒体账户列表。您可以从这些渠道关注Verge3D的最新进展，并与全世界的Vergers同伴交流与分享。</p>
 
     <ul>
-      <li>
-
-        [link:https://www.facebook.com/soft8soft/ Verge3D的Facebook主页]： 我们发布Verge3D新闻和更新的主要渠道。</li>
-      <li>
-
-        [link:https://twitter.com/soft8soft/ Verge3D on Twitter]： 在推特关注我们，实时跟进开发进展。</li>
+      <li>[link:https://www.facebook.com/soft8soft/ Verge3D的Facebook主页]： 我们发布Verge3D新闻和更新的主要渠道。</li>
+      <li>[link:https://twitter.com/soft8soft/ Verge3D on Twitter]： 在推特关注我们，实时跟进开发进展。</li>
       <li>官方 [link:https://www.youtube.com/c/soft8soft/ YouTube频道]： Verge3D优质视频教程发布。</li>
-      <li>
-
-        [link:https://www.linkedin.com/company/soft8soft/ Soft8Soft on LinkedIn]： 公司介绍。</li>
-      <li>
-
-        [link:https://discord.gg/TaG7QY8 Verge3D on Discord]： 社区主导的Discord频道。</li>
-      <li>
-
-        [link:https://www.instagram.com/soft8soft/ Soft8Soft on Instagram]： Verge3D和WebGL新鲜资讯，幕后照片与视频。</li>
-      <li>
-
-        [link:https://www.reddit.com/r/verge3d/ Verge3D on Reddit]： Verge3D社区运营的Reddit订阅版。</li>
+      <li>[link:https://www.linkedin.com/company/soft8soft/ Soft8Soft on LinkedIn]： 公司介绍。</li>
+      <li>[link:https://discord.gg/TaG7QY8 Verge3D on Discord]： 社区主导的Discord频道。</li>
+      <li>[link:https://www.instagram.com/soft8soft/ Soft8Soft on Instagram]： Verge3D和WebGL新鲜资讯，幕后照片与视频。</li>
+      <li>[link:https://www.reddit.com/r/verge3d/ Verge3D on Reddit]： Verge3D社区运营的Reddit订阅版。</li>
     </ul>
 
     <p>你也可以在社交媒体中使用 <strong>#Verge3D</strong> 或 <strong>#3DWeb</strong> 标签，以查找有关Verge3D的信息，以及来自Web3D行业的最新进展。</p>
@@ -132,21 +107,11 @@
     <p>在产品对比网站中的Verge3D评价信息。我们很想知道您的想法，并感谢您的真诚反馈！</p>
 
     <ul>
-      <li>
-
-        [link:https://www.soft8soft.com/store/ Verge3D Store]： 点击产品，了解评价。</li>
-      <li>
-
-        [link:https://alternativeto.net/software/verge3d/ 在AlternativeTo上的Verge3D页面]。</li>
-      <li>
-
-        [link:https://www.g2.com/products/soft8soft-llc-verge3d/reviews 在G2上的Verge3D评价]。</li>
-      <li>
-
-        [link:https://www.producthunt.com/posts/verge3d Product Hunt] 网站上的Verge3D页面。</li>
-      <li>
-
-        [link:https://alternative.me/verge3d Alternative.me]： 类似于AlternativeTo的网站。</li>
+      <li>[link:https://www.soft8soft.com/store/ Verge3D Store]： 点击产品，了解评价。</li>
+      <li>[link:https://alternativeto.net/software/verge3d/ 在AlternativeTo上的Verge3D页面]。</li>
+      <li>[link:https://www.g2.com/products/soft8soft-llc-verge3d/reviews 在G2上的Verge3D评价]。</li>
+      <li>[link:https://www.producthunt.com/posts/verge3d Product Hunt] 网站上的Verge3D页面。</li>
+      <li>[link:https://alternative.me/verge3d Alternative.me]： 类似于AlternativeTo的网站。</li>
     </ul>
 
     [anchor:demos_and_examples]
@@ -156,19 +121,10 @@
     <p>看看Verge3D都能做什么：</p>
 
     <ul>
-      <li>
-
-        [link:https://www.soft8soft.com/gallery/ Gallery]： 使用Verge3D制作的作品案例展示。这是您了解Verge3D功能与特色的好地方。</li>
-      <li>
-
-        [link:https://www.soft8soft.com/get-verge3d/ Verge3D发行版] 附带了所有案例库中的官方应用实例。</li>
-      <li>
-
-        [link:https://cdn.soft8soft.com/demo/examples/index.html Verge3D代码实例]： 适用于JavaScript编程人员。</li>
-      <li>
-
-        [link:https://sandbox.soft8soft.com/ Verge3D for Wordpress英文沙盒] 与 [link:https://sandbox.funjoy.tech/ Verge3D for
-        Wordpress中文沙盒]： 使用此网站进行测试Verge3D的托管、发布及电商功能。</li>
+      <li>[link:https://www.soft8soft.com/gallery/ Gallery]： 使用Verge3D制作的作品案例展示。这是您了解Verge3D功能与特色的好地方。</li>
+      <li>[link:https://www.soft8soft.com/get-verge3d/ Verge3D发行版] 附带了所有案例库中的官方应用实例。</li>
+      <li>[link:https://cdn.soft8soft.com/demo/examples/index.html Verge3D代码实例]： 适用于JavaScript编程人员。</li>
+      <li>[link:https://sandbox.soft8soft.com/ Verge3D for Wordpress英文沙盒] 与 [link:https://sandbox.funjoy.tech/ Verge3D for Wordpress中文沙盒]： 使用此网站进行测试Verge3D的托管、发布及电商功能。</li>
     </ul>
 
     [anchor:third_party_plugins]
@@ -180,8 +136,7 @@
     <ul>
       <li><a href="https://gumroad.com/l/IpdbDX" target="_blank">CSS3D</a> — 用于在三维对象表面嵌入网站、视频或地图的插件。</li>
       <li><a href="https://gumroad.com/l/HxqzA" target="_blank">Teleport</a> — 在3D场景中添加可点击的导航点，用于移动第一人称摄像机。</li>
-      <li><a href="https://gumroad.com/l/2dCanvasEditorVerge3D" target="_blank">2D Canvas Editor</a> by CyberFox —
-        功能强大的画布工具，可以直接在3D模型上绘图、书写和压印纹理。</li>
+      <li><a href="https://gumroad.com/l/2dCanvasEditorVerge3D" target="_blank">2D Canvas Editor</a> by CyberFox — 功能强大的画布工具，可以直接在3D模型上绘图、书写和压印纹理。</li>
       <li><a href="https://gumroad.com/l/avhgA" target="_blank">尺子</a> — 实现交互式标尺测量三维物体尺寸的插件。</li>
       <li><a href="https://gumroad.com/l/ScreenRecorderVerge3d" target="_blank">Screen Recorder</a> — 实时录屏插件。</li>
       <li><a href="https://gumroad.com/l/RilJu" target="_blank">Draggable Texture</a> — 在模型上实时平移、旋转和缩放纹理。</li>
@@ -203,8 +158,7 @@
 
     <ul>
       <li><a href="https://docs.blender.org/manual/zh-hans/latest/" target="_blank">Blender参考手册</a>：官方Blender手册。</li>
-      <li><a href="http://help.autodesk.com/view/3DSMAX/2020/ENU/" target="_blank">3ds Max学习中心</a>： 用Autodesk 3ds
-        Max综合指南。</li>
+      <li><a href="http://help.autodesk.com/view/3DSMAX/2020/ENU/" target="_blank">3ds Max学习中心</a>： 用Autodesk 3ds Max综合指南。</li>
       <li><a href="https://help.autodesk.com/view/MAYAUL/2020/ENU/" target="_blank">Maya帮助</a>： 使用Autodesk Maya的官方指南。
       </li>
     </ul>
@@ -221,22 +175,11 @@
     <p>跟进浏览器开发进度和路线图的重要资源：</p>
 
     <ul>
-      <li>
-
-        [link:https://chromestatus.com/features Chrome Platform Status] — Google Chrome开发现状。</li>
-      <li>
-
-        [link:https://bugs.chromium.org/p/chromium/issues/list Chromium Issues] — official Chrome/Chromium bug追踪。
-      </li>
-      <li>
-
-        [link:https://platform-status.Mozilla.org/Firefox Platform Status] — Mozilla Firefox开发现状和路线图。</li>
-      <li>
-
-        [link:https://webkit.org/status/ WebKit Feature Status] — Safari/WebKit开发现状。</li>
-      <li>
-
-        [link:https://developer.microsoft.com/en-us/microsoft-edge/status/ Microsoft Edge 平台现状]。</li>
+      <li>[link:https://chromestatus.com/features Chrome Platform Status] — Google Chrome开发现状。</li>
+      <li>[link:https://bugs.chromium.org/p/chromium/issues/list Chromium Issues] — official Chrome/Chromium bug追踪。</li>
+      <li>[link:https://platform-status.Mozilla.org/Firefox Platform Status] — Mozilla Firefox开发现状和路线图。</li>
+      <li>[link:https://webkit.org/status/ WebKit Feature Status] — Safari/WebKit开发现状。</li>
+      <li>[link:https://developer.microsoft.com/en-us/microsoft-edge/status/ Microsoft Edge 平台现状]。</li>
     </ul>
 
     [anchor:browser_technologies]
@@ -246,32 +189,13 @@
     <p>为网络开发人员提供的信息，如规范、实例和调试工具等：</p>
 
     <ul>
-      <li>
-
-        [link:https://www.soft8soft.com/webgl-supported-browsers-and-troubleshooting/ WebGL supported browsers and
-        troubleshooting] —遇到与WebGL支持性相关的急救包。</li>
-      <li>
-
-        [link:https://www.soft8soft.com/webglreport/ WebGL System Report] — 检查系统支持能力。</li>
-      <li>
-
-        [link:https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/WebGL_best_practices WebGL最佳实践] —
-        推荐使用WebGL的方法。</li>
-      <li>
-
-        [link:https://www.soft8soft.com/gamepad_diagnostics/gamepad_diagnostics.html Gamepad Diagnostics Tool]
-        —交互式Gamepad API诊断工具。可用于检查您的设备是否兼容，检索用于Verge3D的模型、轴、按钮与其他信息。</li>
-      <li>
-
-        [link:https://immersive-web.github.io/webxr/ WebXR Device API] — 官方WebXR规范。</li>
-      <li>
-
-        [link:https://immersive-web.github.io/webxr-samples/ WebXR Samples] — 官方WebXR案例，包含了VR与AR演示。</a>
-      </li>
-      <li>
-
-        [link:http://keycode.info/ JavaScript Event KeyCodes] — 键盘事件查看器</a>
-      </li>
+      <li>[link:https://www.soft8soft.com/webgl-supported-browsers-and-troubleshooting/ WebGL supported browsers and troubleshooting] —遇到与WebGL支持性相关的急救包。</li>
+      <li>[link:https://www.soft8soft.com/webglreport/ WebGL System Report] — 检查系统支持能力。</li>
+      <li>[link:https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/WebGL_best_practices WebGL最佳实践] — 推荐使用WebGL的方法。</li>
+      <li>[link:https://www.soft8soft.com/gamepad_diagnostics/gamepad_diagnostics.html Gamepad Diagnostics Tool] — 交互式Gamepad API诊断工具。可用于检查您的设备是否兼容，检索用于Verge3D的模型、轴、按钮与其他信息。</li>
+      <li>[link:https://immersive-web.github.io/webxr/ WebXR Device API] — 官方WebXR规范。</li>
+      <li>[link:https://immersive-web.github.io/webxr-samples/ WebXR Samples] — 官方WebXR案例，包含了VR与AR演示。</a></li>
+      <li>[link:http://keycode.info/ JavaScript Event KeyCodes] — 键盘事件查看器</a></li>
     </ul>
 
     [anchor:gpu]
@@ -281,24 +205,11 @@
     <p>维基百科包含了非常有用的带有GPU规格的文章：</p>
 
     <ul>
-      <li>
-
-        [link:https://en.wikipedia.org/wiki/List_of_Nvidia_graphics_processing_units List of Nvidia graphics processing
-        units].</li>
-      <li>
-
-        [link:https://en.wikipedia.org/wiki/List_of_AMD_graphics_processing_units List of AMD graphics processing
-        units].</li>
-      <li>
-
-        [link:https://en.wikipedia.org/wiki/List_of_Intel_graphics_processing_units List of Intel graphics processing
-        units].</li>
-      <li>
-
-        [link:https://en.wikipedia.org/wiki/Mali_(GPU) List of Mali GPUs].</li>
-      <li>
-
-        [link:https://en.wikipedia.org/wiki/Adreno List of Qualcomm Adreno GPUs].</li>
+      <li>[link:https://en.wikipedia.org/wiki/List_of_Nvidia_graphics_processing_units List of Nvidia graphics processingunits].</li>
+      <li>[link:https://en.wikipedia.org/wiki/List_of_AMD_graphics_processing_units List of AMD graphics processing units].</li>
+      <li>[link:https://en.wikipedia.org/wiki/List_of_Intel_graphics_processing_units List of Intel graphics processing units].</li>
+      <li>[link:https://en.wikipedia.org/wiki/Mali_(GPU) List of Mali GPUs].</li>
+      <li>[link:https://en.wikipedia.org/wiki/Adreno List of Qualcomm Adreno GPUs].</li>
     </ul>
 
     [anchor:international_resources]
@@ -310,17 +221,11 @@
     <h3>俄语</h3>
 
     <ul>
-      <li><a href="https://www.soft8soft.com/ru/%D1%84%D0%BE%D1%80%D1%83%D0%BC%D1%8B/" target="_blank">Русскоязычный
-          форум Verge3D</a>.</li>
-      <li><a href="https://www.youtube.com/channel/UCqrdIbDZUSGr_fiT_aGOT9Q" target="_blank">Verge3D по-русски</a>
-        — официальный канал на YouTube.</li>
-      <li><a href="https://youtu.be/6uKHWamVK3A" target="_blank">Базовые основы работы с Verge3D</a> — серия
-        видеуроков Игоря Ткаченко.</li>
-      <li><a href="https://www.youtube.com/playlist?list=PLRt8w_7VFUf3cPhZxa93Wu4IY6ga_Tqh0" target="_blank">Web 3D
-          Базовый курс</a> — бесплатные уроки по Verge3D от студии CyberFox.</li>
-      <li><a href="https://www.youtube.com/playlist?list=PLtsBd1SCeEv7bempcr1gz2drr_vA2Bp4y" target="_blank">Verge3D.
-          Программируй как художник</a> — программирование в Verge3D с использованием Puzzles. Серия для
-        художников без опыта или с небольшим опытом в программировании.</li>
+      <li><a href="https://www.soft8soft.com/ru/%D1%84%D0%BE%D1%80%D1%83%D0%BC%D1%8B/" target="_blank">Русскоязычный форум Verge3D</a>.</li>
+      <li><a href="https://www.youtube.com/channel/UCqrdIbDZUSGr_fiT_aGOT9Q" target="_blank">Verge3D по-русски</a> — официальный канал на YouTube.</li>
+      <li><a href="https://youtu.be/6uKHWamVK3A" target="_blank">Базовые основы работы с Verge3D</a> — серия видеуроков Игоря Ткаченко.</li>
+      <li><a href="https://www.youtube.com/playlist?list=PLRt8w_7VFUf3cPhZxa93Wu4IY6ga_Tqh0" target="_blank">Web 3D Базовый курс</a> — бесплатные уроки по Verge3D от студии CyberFox.</li>
+      <li><a href="https://www.youtube.com/playlist?list=PLtsBd1SCeEv7bempcr1gz2drr_vA2Bp4y" target="_blank">Verge3D. Программируй как художник</a> — программирование в Verge3D с использованием Puzzles. Серия для художников без опыта или с небольшим опытом в программировании.</li>
     </ul>
 
     [anchor:chinese]
@@ -328,8 +233,7 @@
     <h3>中文</h3>
 
     <ul>
-      <li><a href="https://verge3d.funjoy.tech/" target="_blank">Verge3D中国</a>： 是由Soft8Soft与FunJoy.Tech共同打造的中文门户。
-      </li>
+      <li><a href="https://verge3d.funjoy.tech/" target="_blank">Verge3D中国</a>： 是由Soft8Soft与FunJoy.Tech共同打造的中文门户。</li>
       <li><a href="https://weixin.sogou.com/weixin?type=1&s_from=input&query=Verge3D" target="_blank">Verge3D微信公众号</a>： 在微信中搜索Verge3D，第一时间掌握了解中文版发行说明及相关资讯。</li>
       <li>[link:https://space.bilibili.com/402774953 Bilibili]： 在这里发布英文教学视频的中文字幕版，及中文教学视频。</li>
       <li>[link:https://weibo.com/verge3d 新浪微博]： 偶尔在这里发布资讯信息。</li>
@@ -346,11 +250,8 @@
     <h3>西班牙语</h3>
 
     <ul>
-      <li><a href="https://www.youtube.com/watch?v=DCeVg89Y0Yg&list=PLqWsGU6JgjsXdgIHOFhFdvzYgiID0-8Bu"
-          target="_blank">Presentaci&oacute;n videotutoriales verge3d y blender.Creaci&oacute;n de videojuegos para la
-          web</a>.</li>
-      <li><a href="https://es.wikipedia.org/wiki/Verge3D" target="_blank">Art&iacute;culo de Verge3D en Wikipedia</a>.
-      </li>
+      <li><a href="https://www.youtube.com/watch?v=DCeVg89Y0Yg&list=PLqWsGU6JgjsXdgIHOFhFdvzYgiID0-8Bu" target="_blank">Presentaci&oacute;n videotutoriales verge3d y blender.Creaci&oacute;n de videojuegos para la web</a>.</li>
+      <li><a href="https://es.wikipedia.org/wiki/Verge3D" target="_blank">Art&iacute;culo de Verge3D en Wikipedia</a>.</li>
     </ul>
 
     [anchor:portuguese]
